@@ -162,7 +162,7 @@ sub __TOKENIZER__on_char {
 
 	# Suck in till the end of the symbol
 	pos $t->{line} = $t->{line_cursor};
-	if ( $t->{line} =~ m/\G([\w:\']+)/gc ) {
+	if ( $t->{line} =~ m/\G(\s*[\w:\']+)/gc ) {
 		$t->{token}->{content} .= $1;
 		$t->{line_cursor}      += length $1;
 	}
@@ -201,6 +201,7 @@ sub __TOKENIZER__on_char {
 	my $pattern = qr/
 	^(
 		[\$@%&*]
+		\s*
 		(?:
 				: (?! : )			# allow single-colon non-magic variables
 			|
